tweaked cases.csv to get rid of errors previously fixed by students. Added code to get date format and produce an epi curve

--- a/visualization-solutions.Rmd
+++ b/visualization-solutions.Rmd
@@ -41,7 +41,7 @@ library(tidyverse)
 library(magrittr)
 ```
 
-By loading `tidyverse` we now have the function `read_csv` available to us. Use this function to read in the file "cases.csv" assigned to the variable "mers". Throughout, you can see the way to solve any coding challenges set to you by clicking on the 'solution' button.
+By loading `tidyverse` we now have the function `read_csv` available to us. We will use this function to read in the file "cases.csv", which we will assign to the variable "mers". 
 
 
 ```{r readData-setup, echo=FALSE, message=F, warning=FALSE}
@@ -50,11 +50,110 @@ library(magrittr)
 ```
 
 
-```{r readData, exercise=TRUE, exercise.eval=FALSE, message=FALSE, warning=FALSE}
+```{r readData, exercise=FALSE, message=FALSE, warning=FALSE}
+mers <- read_csv("https://raw.githubusercontent.com/awpark/learnR/master/ldPopClim.csv")
+```
+
+
+
+## Formatting some dates
+
+We can inspect the data using the base R function `head`, which displays the first few rows of data. Try doing this for the data frame "mers" that we have just created. If you're ever unsure how to complete a coding challenge in this module, you can click the "solution" button.
+
+```{r inspectData1-setup, echo=FALSE, message=F, warning=FALSE}
+library(tidyverse)
+library(magrittr)
+mers <- read_csv("https://raw.githubusercontent.com/awpark/learnR/master/ldPopClim.csv")
+```
+
+
+```{r inspectData1, exercise=TRUE, exercise.eval=FALSE, message=FALSE, warning=FALSE}
 
 ```
 
-```{r readData-solution}
-mers <- read_csv("cases.data")
+```{r inspectData1-solution}
+head(mers)
 ```
+
+
+
+We can additionally find out what kind of data are stored in a particular column of a data frame using the base function `class`. Columns are referred to using the `$` sign. For example, the column "onset" in the "mers" data frame is referred to by `mers$onset`. What type of data are stored in the column "onset". 
+
+```{r inspectData2-setup, echo=FALSE, message=F, warning=FALSE}
+library(tidyverse)
+library(magrittr)
+mers <- read_csv("https://raw.githubusercontent.com/awpark/learnR/master/cases.csv")
+```
+
+
+```{r inspectData2, exercise=TRUE, exercise.eval=FALSE, message=FALSE, warning=FALSE}
+
+```
+
+```{r inspectData2-solution}
+class(mers$onset)
+```
+
+We see that the data in this column represent dates but are formatted as a data type called factor. It is common that R defaults to assuming factor. The other date column ("hospitalized") is also formatted as factor. These dates can be reformatted using the `lubridate` package. Next, we'll use this package to create a new version of the "onset" and "hospitalized" columns (called "onset2" and "hospitalized2") using the `Date` class. 
+
+```{r}
+library(lubridate)
+# here the %<>% symbol is a 2-way pipe: (i) we pass mers from L to R and use the function mutate to create two new columns
+# (ii) we pass the result back (from R to L) i.e. we call the new data frame 'mers' which is now the original plus these two
+# new columns. The 'ymd' function turns text like "2015-02-14" into data meaning 14th Feb 2015.
+mers %<>% mutate(onset2=ymd(onset), hospitalized2=ymd(hospitalized))
+class(mers$onset2)
+```
+
+
+We may also find it useful to have a simple numerical value for the days elapsed since the start of the epidemic.  We use the following cod, which identifies the earliest onset date then measures time since that date.
+
+```{r}
+# R needs to be told that any NA values are not included in search for minimum otherwise NA is the minimum!
+# start with mers; pull the onset2 column; find the min; store in 'day0'
+day0 <- mers %>% pull(onset2) %>% min(na.rm=T)
+# create a new column 'epi.day' which is number of days since "case 0". We use 'as.numeric' so this is just stored as a number.
+mers %<>% mutate(epi.day=as.numeric(onset2 - day0))
+```
+
+
+
+## Making a plot
+
+
+We can explore some of the MERS data using the function `ggplot`. One plot we might wish to produce is the *epidemic curve* which is basically a bar plot.  An empty plot can be produced using the command `ggplot(data=mers)`. The epidemic curve is then produced by adding a bar plot using the geom function `geom_bar`. The last line of our code adds some labels. Ryn the code to check it works.
+
+```{r epiCurve-setup, echo=FALSE, message=F, warning=FALSE}
+library(tidyverse)
+library(magrittr)
+library(lubridate)
+load("getMers1.Rda")
+```
+
+
+```{r epiCurve, exercise=FALSE, message=FALSE, warning=FALSE}
+ggplot(data=mers) + 
+  geom_bar(mapping=aes(x=epi.day)) +
+  labs(x='Epidemic day', y='Case count', title='Global count of MERS cases by date of symptom onset',
+       caption="Data from: https://github.com/rambaut/MERS-Cases/blob/gh-pages/data/cases.csv")
+```
+
+<!-- **Exercise. To produce this plot, type all the commands up to this point *exactly* as they appear. Particularly, note that as we "build" the plot in the last code snippet, we end each line with the addition syhmbol "+". What happens if we don't use this convention?** -->
+
+<!-- Of course, all these cases are distributed among a number of different countries. We can modify the plot to show this using the using the aesthetic `fill`. -->
+
+<!-- ```{r} -->
+<!-- ggplot(data=mers) +  -->
+<!--   geom_bar(mapping=aes(x=epi.day, fill=country)) + -->
+<!--   labs(x='Epidemic day', y='Case count', title='Global count of MERS cases by date of symptom onset', -->
+<!--        caption="Data from: https://github.com/rambaut/MERS-Cases/blob/gh-pages/data/cases.csv") -->
+<!-- ``` -->
+
+<!-- In this example, we've shown how to make a basic bar plot with `ggplot` and the geom function `geom_bar`. Our mapping of data objects to plot objects was performed using `aes` and we used the `fill` aesthetic to examing the distribution of cases among countries. There are lots of variations on the bar plot that we can examine. For instance, we can modify the `position`, which is another argument to `geom_bar`. -->
+
+<!-- **Exercise. Modify the epidemic curve using the argument `position="fill"`. What does this plot show?** -->
+
+<!-- **Exercise. Another way to modify a bar plot is to change the coordinates. This can be done by "adding" `coord_flip()` and `coord_polar()` to the plot. What does this plot show?** -->
+
+
 
